--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -179,8 +179,8 @@
                                 <input type="number" class="form-control" id="tx-amount" step="0.00000001" required>
                             </div>
                             <div class="mb-3">
-                                <label for="tx-private-key" class="form-label">Private Key</label>
-                                <input type="password" class="form-control" id="tx-private-key" required>
+                                <label for="tx-wallet-password" class="form-label">Wallet Password</label>
+                                <input type="password" class="form-control" id="tx-wallet-password" required>
                             </div>
                             <button type="submit" class="btn btn-success">
                                 <i class="fas fa-send me-1"></i>Send Transaction
